--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                 Te apresento a  mais  <strong>NOVA</strong> técnica cirúrgica minimamente invasiva que vem transformando sorrisos e elevando a autoestima!<br> <br>  
             </p>
             <span class="call" style="text-align: center; background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%); color: rgba(0, 0, 0, 0.781);">
-                <a href="section.tira-duvidas">SAIBA MAIS!</a>
+                <a href="https://api.whatsapp.com/send?phone=5527998035010&text=Quero%20saber%20mais%20sobre%20o%20LIP%20LIFT%20com%20a%20Dra%20Vivian!" target="_blank">SAIBA MAIS!</a>
             </span>
         </div>
         <div class="imagem-vivian">
@@ -144,7 +144,7 @@
             <h3>VOCÊ QUER SABER MAIS DETALHES E SE TEM REAL INDICAÇÃO PARA O LIP LIFT?</h3><br><br>
            <p>Clique no <strong>SAIBA MAIS</strong> e agende sua consulta gratuita <strong>ON-LINE</strong> ou <strong>PRESENCIAL</strong> comigo!</p><br><br><br><br>
            <span style="background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%); color: rgba(0, 0, 0, 0.781);">
-            <a href="https://wa.me/27998035010" target="_blank" style="color: black;"><strong>SAIBA MAIS</strong></a>
+            <a href="https://api.whatsapp.com/send?phone=5527998035010&text=Quero%20saber%20mais%20sobre%20o%20LIP%20LIFT%20com%20a%20Dra%20Vivian!" target="_blank" style="color: black;"><strong>SAIBA MAIS</strong></a>
         </span>
         </div>
     </section>
