--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                 Te apresento a  mais  <strong>NOVA</strong> técnica cirúrgica minimamente invasiva que vem transformando sorrisos e elevando a autoestima!<br> <br>  
             </p>
             <span class="call" style="text-align: center; background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%); color: rgba(0, 0, 0, 0.781);">
-                <a href="https://api.whatsapp.com/send?phone=5527998035010&text=Quero%20saber%20mais%20sobre%20o%20LIP%20LIFT%20com%20a%20Dra%20Vivian!" target="_blank">SAIBA MAIS!</a>
+                <a href="section.tira-duvidas">SAIBA MAIS!</a>
             </span>
         </div>
         <div class="imagem-vivian">
@@ -45,7 +45,7 @@
     <section class="exp-proc">
         <div class="txt-exp">
             <div class="pt-01">
-                <p style="color: white; margin-top: 30px; font-size: 20px; font-family: 'Raleway', sans-serif; text-align: justify;" >
+                <p style="color: white; margin-top: 30px; font-size: 20px; font-family: 'Raleway', sans-serif; text-align: center;" >
                     <strong>O LIP LIFT</strong> é uma técnica cirúrgica que reposiciona os lábios, corrigindo o filtro labial longo,isto é,
                     a distância longa entre a base do nariz e o lábio superior, e que consequentemente esconde os dentes ao sorrir e ao falar;
                     além disso ela everte os lábios que estão finos e invertidos (“ pra dentro”), trazendo o aspecto de maior espessura da porção
@@ -144,7 +144,7 @@
             <h3>VOCÊ QUER SABER MAIS DETALHES E SE TEM REAL INDICAÇÃO PARA O LIP LIFT?</h3><br><br>
            <p>Clique no <strong>SAIBA MAIS</strong> e agende sua consulta gratuita <strong>ON-LINE</strong> ou <strong>PRESENCIAL</strong> comigo!</p><br><br><br><br>
            <span style="background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%); color: rgba(0, 0, 0, 0.781);">
-            <a href="https://api.whatsapp.com/send?phone=5527998035010&text=Quero%20saber%20mais%20sobre%20o%20LIP%20LIFT%20com%20a%20Dra%20Vivian!" target="_blank" style="color: black;"><strong>SAIBA MAIS</strong></a>
+            <a href="https://wa.me/27998035010" target="_blank" style="color: black;"><strong>SAIBA MAIS</strong></a>
         </span>
         </div>
     </section>
@@ -153,7 +153,7 @@
     <section class="informacoes-pessoais">
         <div class="resumo">
             <h1 style="background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%); color: rgba(0, 0, 0, 0.781); border-radius: 5px; text-align: center;"> POR QUE A VIVIAN?</h1><br>
-            <p>
+            <p style="text-align: center;">
                 Para mim, facilitar o sorriso do próximo sempre foi uma oportunidade de levar e sentir o amor de Deus! 
                 Foi buscando viver isso que me formei em odontologia na universidade federal do Espírito Santo em 2016. <br><br>
             </p>
