--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
             </span>
         </div>
         <div class="imagem-vivian">
-            <img src="imagens/vivian-principal.png" alt="Vivian" sizes="(max-width: 300px) 100vw, 300px">
+            <img src="imagens/vivian-principal.png" alt="Vivian">
         </div>
     </section>
 
@@ -157,17 +157,17 @@
                 Para mim, facilitar o sorriso do próximo sempre foi uma oportunidade de levar e sentir o amor de Deus! 
                 Foi buscando viver isso que me formei em odontologia na universidade federal do Espírito Santo em 2016. <br><br>
             </p>
-            <p>
+            <p style="text-align: center;">
                 Não muito tarde, em 2017, enxerguei nos procedimentos estéticos da harmonização facial um meio de ampliar meus resultados. 
                 Assim, me especializei na área em 2019 e desde então vejo meu propósito se alargar por meio da elevação da autoestima e o 
                 resgate do amor próprio com as técnicas de rejuvenescimento facial. <br><br>
             </p>
-            <p>
+            <p style="text-align: center;">
                 Provocar sorrisos novos, olhares transformados e almas renovadas  são minha satisfação pessoal e meu propósito de vida!<br><br>
             </p>
         </div>
-        <div class="imagem-vivian">
-           <img src="imagens/vivian-queixo-p.png" alt="Vivian" sizes="(max-width: 300px) 100vw, 300px">
+        <div class="viviann">
+           <img src="imagens/viviann.png" alt="Vivian" style="margin-top: 20px;">
         </div><br>
     </section>
 
