--- a/home.html
+++ b/home.html
@@ -31,7 +31,8 @@
                 Te apresento a  mais  <strong>NOVA</strong> técnica cirúrgica minimamente invasiva que vem transformando sorrisos e elevando a autoestima!<br> <br>  
             </p>
             <span class="call" style="text-align: center; background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%); color: rgba(0, 0, 0, 0.781);">
-                <a href="section.tira-duvidas">SAIBA MAIS!</a>
+                <a href="https://www.google.com/maps/dir/-20.2917508,-40.2986414/vivian+valentim/@-20.3180861,-40.309972,
+                14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0xb817384f8acdbd:0x3f87cf3b93f912c5!2m2!1d-40.2887568!2d-20.3419517" target="_blank">SAIBA MAIS!</a>
             </span>
         </div>
         <div class="imagem-vivian">
