--- a/home.html
+++ b/home.html
@@ -31,8 +31,7 @@
                 Te apresento a  mais  <strong>NOVA</strong> técnica cirúrgica minimamente invasiva que vem transformando sorrisos e elevando a autoestima!<br> <br>  
             </p>
             <span class="call" style="text-align: center; background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%); color: rgba(0, 0, 0, 0.781);">
-                <a href="https://www.google.com/maps/dir/-20.2917508,-40.2986414/vivian+valentim/@-20.3180861,-40.309972,
-                14z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0xb817384f8acdbd:0x3f87cf3b93f912c5!2m2!1d-40.2887568!2d-20.3419517" target="_blank">SAIBA MAIS!</a>
+                <a href="https://api.whatsapp.com/send?phone=5527998035010&text=Quero%20saber%20mais%20sobre%20o%20LIP%20LIFT%20com%20a%20Dra%20Vivian!" target="_blank">SAIBA MAIS!</a>
             </span>
         </div>
         <div class="imagem-vivian">
@@ -145,7 +144,7 @@
             <h3>VOCÊ QUER SABER MAIS DETALHES E SE TEM REAL INDICAÇÃO PARA O LIP LIFT?</h3><br><br>
            <p>Clique no <strong>SAIBA MAIS</strong> e agende sua consulta gratuita <strong>ON-LINE</strong> ou <strong>PRESENCIAL</strong> comigo!</p><br><br><br><br>
            <span style="background: linear-gradient(90deg, rgba(249,220,137,1) 0%, rgba(255,250,183,1) 35%, rgba(211,169,95,1) 100%); color: rgba(0, 0, 0, 0.781);">
-            <a href="https://wa.me/27998035010" target="_blank" style="color: black;"><strong>SAIBA MAIS</strong></a>
+            <a href="https://api.whatsapp.com/send?phone=5527998035010&text=Quero%20saber%20mais%20sobre%20o%20LIP%20LIFT%20com%20a%20Dra%20Vivian!" target="_blank" style="color: black;"><strong>SAIBA MAIS</strong></a>
         </span>
         </div>
     </section>
